# scrapperProject

./: .env  .gitignore  main.py  main_old.py  pyproject.toml  requirements.txt  token.txt  token_sample.txt
