[tool.poetry]
name = "scrapper-latest"
version = "0.1.0"
description = "Scrap latest posts from url with latest file. Notifying using telegram."
authors = ["inspi <inspi@daum.net>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
bs4 = "^0.0.1"
python-telegram-bot = "^13.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
