[tool.poetry]
name = "scrapper-latest"
version = "0.1.0"
description = "Scrap latest posts from url with latest file. Notifying using telegram."
authors = ["inspi <inspi@daum.net>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
bs4 = "^0.0.1"
beautifulsoup4 = "^4.9.3"
certifi = "^2020.12.5"
chardet = "^4.0.0"
feedparser = "^6.0.2"
pytz = "^2021.1"
sgmllib3k = "^1.0.0"
six = "^1.15.0"
soupsieve = "^2.2"
python-telegram-bot = "^13.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
